--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,7 +1,7 @@
 <p>
-  <h1>Learn Data Science</h1>
+  <h1 class="whitetext">Learn Data Science</h1>
 </p>
-<p>The following lessons will help you understand the basics of data science.</p>
+<p class="whitetext">The following lessons will help you understand the basics of data science.</p>
 <p>
 <%= link_to("View the list of lessons", lessons_path) %>
 </p>
