--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,20 +25,22 @@
       </ul>
     </section> -->
   </nav>
+    <div class ="background">
 
-  <%- flash.each do |key, value| -%>
-    <div class="flash flash-<%= key %>">
-      <%= value %>
-    </div>
-  <%- end -%>
+      <%- flash.each do |key, value| -%>
+        <div class="flash flash-<%= key %>">
+          <%= value %>
+        </div>
+      <%- end -%>
 
-  <div class="row">
-    <div class="small-12 columns">
-      <%= yield %>
-    </div>
+      <div class="row">
+        <div class="small-12 columns">
+          <%= yield %>
+        </div>
+      </div>
+
+      <%= javascript_include_tag 'application' %>
+      <%= yield :extra_footer %>
   </div>
-
-  <%= javascript_include_tag 'application' %>
-  <%= yield :extra_footer %>
 </body>
 </html>
