--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,14 +1,12 @@
-<p>
-  <h1 class="whitetext">Learn Data Science</h1>
-</p>
-<p class="whitetext">The following lessons will help you understand the basics of data science.</p>
-<p>
-<%= link_to("View the list of lessons", lessons_path) %>
-</p>
-
 <div class="row">
   <div class="small-12 columns">
-    <%= image_tag "workspace8_high_res.jpg" %>
+    <p>
+      <h1 class="background">Learn Data Science</h1>
+    </p>
+    <p>The following lessons will help you understand the basics of data science.</p>
+    <p>
+      <%= link_to("View the list of lessons", lessons_path, class: "button") %>
+    </p>
+      <%= image_tag "workspace8_high_res.jpg" %>
     </div>
   </div>
-</div>
