Updating links and content

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -4,6 +4,10 @@
       <h1 class="background">Learn Data Science</h1>
     </p>
     <p>The following lessons will help you understand the basics of data science.</p>
+    <p>This is a data science tutorial that goes over the fundaments of analyzing a data set with Excel.
+      Before starting this tutorial you should know how to gather and organize data effectively. Businesses generate a lot of data and you must be able to bring that data into Excel so you can work with it.
+      You should also be comfortable creating formulas in Excel. All of the analysis will involve Excel formulas.
+    </p>
     <p>
       <%= link_to("View the list of lessons", lessons_path, class: "button") %>
     </p>
